--- a/ReactHooks/LearningHooks/src/App.css
+++ b/ReactHooks/LearningHooks/src/App.css
@@ -3,6 +3,10 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .logo {
@@ -39,8 +43,4 @@
 
 .read-the-docs {
   color: #888;
-}
-
-.header{
-  background-color: coral;
 }
